# eta-aws-lambda

./: LICENSE  README.md  eta-aws-lambda.cabal
src/: Lambda.hs  Main.hs
