name:                eta-aws-lambda
version:             0.1.0.0
synopsis:            AWS Lambda Example with Eta
license:             BSD3
license-file:        LICENSE
author:              Matt Spaulding
maintainer:          matt@mattops.io
build-type:          Simple
cabal-version:       >=1.10

executable eta-aws-lambda
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  maven-depends:       com.amazonaws:aws-lambda-java-core:1.1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
